# yubi-supervision

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.cursor/rules/: yubi-supervision.mdc
.github/workflows/: ci.yml
backend/: CLAUDE.md  config.py  expression_vision.py  gemini_vision.py  identity_vision.py  main.py  schemas.py  session_report.py  sources.py  vision.py
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: app.js  index.html  styles.css
scripts/: dev.sh  smoke.sh
tests/: test_api.py  test_gemini_reconcile.py  test_identity.py  test_session_report.py  test_sources.py
