[project]
name = "yubi-supervision"
version = "0.1.0"
description = "YUBI Supervision — live vision command center with YOLOv8, MediaPipe, micro-expressions, and YUBI v3.0 intelligence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "supervision>=0.25.0",
    "mediapipe>=0.10.14",
    "opencv-python>=4.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "ultralytics>=8.0.0",
    "pydantic-settings>=2.0.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["backend", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/schemas.py" = ["UP045"]  # Optional[] required for Pydantic on Python 3.9

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
